--- a/app/src/main/res/navigation/link_account_graph.xml
+++ b/app/src/main/res/navigation/link_account_graph.xml
@@ -9,6 +9,15 @@
         android:id="@+id/linkBankAccountInformativeFragment"
         android:name="com.wolfpackdigital.cashli.presentation.linkBank.informative.LinkBankAccountInformativeFragment"
         android:label="LinkBankAccountInformativeFragment"
-        tools:layout="@layout/fr_link_bank_account_informative" />
+        tools:layout="@layout/fr_link_bank_account_informative" >
+        <action
+            android:id="@+id/action_linkBankAccountInformativeFragment_to_ineligibleInformativeFragment"
+            app:destination="@id/ineligibleInformativeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/ineligibleInformativeFragment"
+        android:name="com.wolfpackdigital.cashli.presentation.linkBank.ineligible.IneligibleInformativeFragment"
+        android:label="IneligibleInformativeFragment"
+        tools:layout="@layout/fr_ineligible_informative"/>
 
 </navigation>
