--- a/app/src/main/res/xml/cash_amount_description.xml
+++ b/app/src/main/res/xml/cash_amount_description.xml
@@ -34,30 +34,19 @@
             app:layout_constraintTop_toTopOf="@id/iv_cash_amount_start" />
 
         <Constraint
-            android:id="@+id/sb_cash_amount"
-            android:layout_width="match_parent"
+            android:id="@+id/ll_select_cash"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dimen_4dp"
             android:layout_marginTop="@dimen/dimen_32dp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_cash_amount_start"
-            app:layout_constraintVertical_bias="0" />
-
-        <Constraint
-            android:id="@+id/tv_cash_amount_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/dimen_12dp"
-            android:layout_marginTop="@dimen/dimen_12dp"
-            android:layout_marginBottom="@dimen/dimen_20dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/sb_cash_amount" />
+            app:layout_constraintTop_toBottomOf="@id/iv_cash_amount_start" />
 
     </ConstraintSet>
+
     <ConstraintSet android:id="@+id/end">
         <Constraint
             android:id="@+id/ib_edit_cash_amount"
@@ -80,27 +69,16 @@
             app:layout_constraintTop_toTopOf="@id/iv_cash_amount_start" />
 
         <Constraint
-            android:id="@+id/sb_cash_amount"
-            android:layout_width="match_parent"
+            android:id="@+id/ll_select_cash"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dimen_4dp"
             android:layout_marginTop="@dimen/dimen_32dp"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_cash_amount_start"
-            app:layout_constraintVertical_bias="0" />
-
-        <Constraint
-            android:id="@+id/tv_cash_amount_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/dimen_12dp"
-            android:layout_marginTop="@dimen/dimen_12dp"
-            android:layout_marginBottom="@dimen/dimen_20dp"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/sb_cash_amount" />
+            app:layout_constraintTop_toBottomOf="@id/iv_cash_amount_start" />
+
     </ConstraintSet>
 </MotionScene>
