Home screen for eligible and ineligible statuses

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,5 @@
     <color name="colorPurpleB9">#8080B9</color>
     <color name="colorPinkBF">#CC4EBF</color>
     <color name="colorRed62">#FD4D62</color>
-    <color name="green71">#07D171</color>
+    <color name="colorGreen71">#07D171</color>
 </resources>
