--- a/app/src/main/res/drawable/home_background_custom_shape.xml
+++ b/app/src/main/res/drawable/home_background_custom_shape.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/colorPrimaryDark" />
 
     <item
@@ -13,7 +12,7 @@
             android:pivotX="0%"
             android:pivotY="100%">
             <shape android:shape="oval">
-                <solid android:color="@color/colorWhite" />
+                <solid android:color="@color/colorWhiteF9" />
             </shape>
         </rotate>
     </item>
