--- a/app/src/main/res/drawable/rounded_layout_20dp.xml
+++ b/app/src/main/res/drawable/rounded_layout_20dp.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/green71" />
+    <solid android:color="@color/colorGreen71" />
     <corners android:radius="@dimen/dimen_20dp" />
 
 </shape>
