--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <!--  NEGATIVE DP -->
     <dimen name="dimen_negative_28dp">-28dp</dimen>
     <dimen name="dimen_negative_48dp">-48dp</dimen>
+    <dimen name="dimen_negative_100dp">-100dp</dimen>
 
     <!--  DP -->
     <dimen name="dimen_1dp">1dp</dimen>
@@ -27,7 +28,6 @@
     <dimen name="dimen_60dp">60dp</dimen>
     <dimen name="dimen_64dp">64dp</dimen>
     <dimen name="dimen_68dp">68dp</dimen>
-    <dimen name="dimen_160dp">160dp</dimen>
 
     <!--  SP -->
     <dimen name="size_12sp">12sp</dimen>
